using System;

namespace Server.Api.Models
{
    public class Topic
    {
        public string name { get; set; }
    }
}